--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,15 @@ set(BCOS_CMAKE_SCRIPTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bcos-cmake-scripts)
 set(BCOS_CRYPTO_CMAKE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/cmake" CACHE PATH "The cmake path for the library")
 list(APPEND CMAKE_MODULE_PATH ${BCOS_CMAKE_SCRIPTS_DIR})
 list(APPEND CMAKE_MODULE_PATH ${BCOS_CRYPTO_CMAKE_DIR})
-#init hunter
-include(HunterGate)
-HunterGate(
-    URL "https://${URL_BASE}/FISCO-BCOS/hunter/archive/2b5b25ecffaba74393740bf0b8758c4e8d9297cf.tar.gz"
-    SHA1 "5d8365a327be260cf24d2b125a71ee7069aca28f"
-    FILEPATH "${BCOS_CRYPTO_CMAKE_DIR}/config.cmake"
-)
+
+if(HUNTER_ENABLED)
+    include(HunterGate)
+    HunterGate(
+        URL "https://${URL_BASE}/FISCO-BCOS/hunter/archive/2b5b25ecffaba74393740bf0b8758c4e8d9297cf.tar.gz"
+        SHA1 "5d8365a327be260cf24d2b125a71ee7069aca28f"
+        FILEPATH "${BCOS_CRYPTO_CMAKE_DIR}/config.cmake"
+    )
+endif()
 
 project(bcos-crypto VERSION "1.0.0")
 set(VERSION_SUFFIX "")
