--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -139,7 +139,7 @@ jobs:
           cargo --version
           source /opt/rh/devtoolset-10/enable
           mkdir -p build && cd build
-          cmake3 .. -DTESTS=ON -DSM2_OPTIMIZE=ON -DHUNTER_ENABLED=OFF
+          cmake3 .. -DTESTS=ON -DHUNTER_ENABLED=OFF -DBOOST_INCLUDEDIR=/usr/include/boost169/ -DBOOST_LIBRARYDIR=/usr/lib64/boost169/
           make -j2
           CTEST_OUTPUT_ON_FAILURE=TRUE make test
   build_with_windows:
