--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,9 +22,10 @@ set(TEST_BINARY_NAME test-bcos-crypto)
 
 find_package(OpenSSL 1.1.1 REQUIRED COMPONENTS Crypto)
 find_package(Boost 1.69.0 REQUIRED COMPONENTS log unit_test_framework)
+find_package(ZLIB 1.2.7 REQUIRED)
 
 add_executable(${TEST_BINARY_NAME} ${SOURCES})
 target_include_directories(${TEST_BINARY_NAME} PRIVATE .)
 target_include_directories(${TEST_BINARY_NAME} PUBLIC)
-target_link_libraries(${TEST_BINARY_NAME} Boost::log Boost::unit_test_framework ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto)
+target_link_libraries(${TEST_BINARY_NAME} Boost::log Boost::unit_test_framework ${BCOS_CRYPTO_TARGET} OpenSSL::Crypto z)
 add_test(NAME test-crypto WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} COMMAND ${TEST_BINARY_NAME})
